subo cosas para la 3ra pre-entrega

--- a/index.html
+++ b/index.html
@@ -6,6 +6,27 @@
     <title>Document</title>
 </head>
 <body>
+    <h2>Pre-entrega 3 de Federico Urano</h2>
+    <button id="mostrar-todo">Mostrar Alumnos</button>
+    <button id="limpiar">Limpiar</button>
+    <form id="formulario">
+        <h4>Ingrese el nombre del alumno</h4>
+        <input type="text">
+        <h4>Ingrese el apellido del alumno</h4>
+        <input type="text">
+        <h4>Ingrese la comision del alumno</h4>
+        <input type="number">
+        <h4>Ingrese la nota 1 del alumno</h4>
+        <input type="number">
+        <h4>Ingrese la nota 2 del alumno</h4>
+        <input type="number">
+        <h4>Ingrese la nota 3 del alumno</h4>
+        <input type="number">
+        <h4>Ingrese el promedio del alumno</h4>
+        <input type="number"><br>
+        <button id="agregar-alumno">Agregar alumno</button>
+    </form>
+    <div id="cosas"></div>
     <script src="./main.js"></script>
 </body>
 </html>
