--- a/index.html
+++ b/index.html
@@ -25,6 +25,8 @@
         <button id="agregar-alumno">Agregar alumno</button>
     </form>
     <div id="cosas"></div>
-    <script src="./main.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+
+    <script type="module" src="./main.js"></script>
 </body>
 </html>
