--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header class="header">
-        <h2>Pre-entrega 3 de Federico Urano</h2>
+        <h2>Proyecto final de Federico Urano</h2>
     </header>
     <main class="main">
         <button id="mostrar-todo" class="btn btn-primary">Mostrar Alumnos</button>
